--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "wordpress-plugin",
     "license": "GPL-2.0-or-later",
     "require": {
-        "composer/installers": "^1",
+        "composer/installers": "^1 || ^2",
         "php": ">=7"
     }
 }
